syntax = "proto3";

package com.gitlab.isard.isardvdi.controller;
option go_package = "gitlab.com/isard/isardvdi/controller/pkg/proto";

import "viewer.proto";

service Controller {
    rpc DesktopList(DesktopListRequest) returns (DesktopListResponse) {}
    rpc DesktopStart(DesktopStartRequest) returns (DesktopStartResponse) {}
    rpc DesktopStop(DesktopStopRequest) returns (DesktopStopResponse) {}
    rpc ViewerGet(ViewerGetRequest) returns (ViewerGetResponse) {}
}

message DesktopListRequest {}

message DesktopListResponse {}

message DesktopStartRequest {
    string id = 1;
}

message DesktopStartResponse {
    com.gitlab.isard.isardvdi.common.Viewer viewer = 1;
}

message DesktopStopRequest {
    string id = 1;
}

message DesktopStopResponse {}

message ViewerGetRequest {
    string id = 1;
}

message ViewerGetResponse {
    com.gitlab.isard.isardvdi.common.Viewer viewer = 1;
}
